# LLM_Study

./: .gitignore  README.md  docker-compose.yml
Backend/: Dockerfile
Backend/app/: main.py  pyproject.toml
Backend/app/routers/: example.py
Frontend/app/: package-lock.json  package.json
Frontend/app/src/: main.jsx
Frontend/app/src/components/: LoginForm.jsx
Frontend/app/src/features/auth/: authAPI.js  authSlice.js
Frontend/app/src/features/auth/components/: LoginForm.jsx
Frontend/app/src/features/auth/hooks/: useAuth.js
Frontend/app/src/features/auth/pages/: LoginPage.jsx
Frontend/app/src/layouts/: LoginLayout.jsx  MainLayout.jsx
Frontend/app/src/pages/: HomePage.jsx
Frontend/app/src/routes/: AppRouter.jsx
Frontend/app/src/services/: axiosInstance.js
Nginx/: Dockerfile  default.conf  nginx.conf
